# womens-eights-times

./: .gitignore  README.md  RowingResults.xlsx  UK Sport Presentastion.pptx  UK Sport Presentation.docx  Womens 8os results.csv  Womens 8s experiments.ipynb  Womens_8_times.ipynb  pyproject.toml  rowing presentation.ipynb
