[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Simon Suthers", email = "simonsuthers@yahoo.co.uk"},
]
dependencies = [
    "numpy>=1.25.2",
    "ipykernel>=6.25.2",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "scipy>=1.9.3",
    "scikit-learn>=1.3.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

